# CoverFS

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/: FindLibgcrypt.cmake  FindPOCO.cmake  FindPkgMacros.cmake  Finddokan.cmake  Findfuse.cmake  config.h.in
resources/: ToIco.sh
resources/dokan/include/dokan/: dokan.h  fileinfo.h  public.h
resources/dokan/include/fuse/: docanfuse.h  fuse.h  fuse_common.h  fuse_opt.h  fuse_sem_fix.h  fuse_win.h  fusemain.h  utils.h
src/: CBlockIO.cpp  CBlockIO.h  CCacheIO.cpp  CCacheIO.h  CDirectory.cpp  CDirectory.h  CEncrypt.cpp  CEncrypt.h  CFSHandler.cpp  CFSHandler.h  CFragment.cpp  CFragment.h  CNetBlockIO.cpp  CNetBlockIO.h  CNetReadWriteBuffer.cpp  CNetReadWriteBuffer.h  CPrintCheckRepair.cpp  CPrintCheckRepair.h  CSimpleFS.cpp  CSimpleFS.h  CStatusView.cpp  CStatusView.h  CWriteRingBuffer.cpp  CWriteRingBuffer.h  INode.cpp  INode.h  Logger.cpp  ParallelTest.cpp  ParallelTest.h  coverfsserver.cpp  debug.cpp  debug.h  dokanoper.cpp  dokanoper.h  fuseoper.cpp  fuseoper.h  main.cpp
src/FS/: CFilesystem.cpp  CFilesystem.h  CPath.cpp  CPath.h
src/FS/ContainerFS/: ContainerFS.cpp  ContainerFS.h
src/FS/SimpleFS/: CFragment.h  CPrintCheckRepair.cpp  CPrintCheckRepair.h  CSimpleFS.cpp  CSimpleFS.h  CSimpleFSDirectory.cpp  CSimpleFSDirectory.h  CSimpleFSInode.cpp  CSimpleFSInode.h
src/IO/: CBlockIO.cpp  CBlockIO.h  CCacheIO.cpp  CCacheIO.h  CEncrypt.cpp  CEncrypt.h  CNetBlockIO.cpp  CNetBlockIO.h  CNetReadWriteBuffer.cpp  CNetReadWriteBuffer.h
src/SimpleFS/: CDirectory.cpp  CDirectory.h  CFragment.cpp  CFragment.h  CPrintCheckRepair.cpp  CPrintCheckRepair.h  CSimpleFS.cpp  CSimpleFS.h  INode.cpp  INode.h
src/client/: CStatusView.cpp  CStatusView.h  ParallelTest.cpp  ParallelTest.h  main.cpp
src/fuse/: dokanoper.cpp  dokanoper.h  fuseoper.cpp  fuseoper.h
src/interface/: CFSHandler.cpp  CFSHandler.h
src/qt/: CoverFS.pro  CoverFS.rc  Makefile  main.cpp
src/server/: coverfsserver.cpp
src/utils/: Logger.cpp  Logger.h  StringUtils.h
src/webapp/: CConfigFile.cpp  CConfigFile.h  CoverFS.config  webapp.cpp  webapp.h
ssl/: dh1024.pem  gen.sh  openssl.cnf  server.crt  server.csr  server.key
templates/: configuration.html  footer.html  header.html  log.html  status.html
templates/css/: style.css
tests/: checkfragment.cpp
